Fix sub aura summon empty colors/spacing

--- a/src/components/ExtraSummons/index.scss
+++ b/src/components/ExtraSummons/index.scss
@@ -23,10 +23,10 @@
     }
 
     .SummonUnit .SummonImage {
-        background: #D5D3F6;
+        background: #facea7;
     }
 
-    .WeaponUnit .WeaponImage .icon svg {
-        fill: #8F8AC6;
+    .SummonUnit .SummonImage .icon svg {
+        fill: #a8703f;
     }
 }
